--- a/exam.html
+++ b/exam.html
@@ -3,56 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>考试系统</title>
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <header>西安软件服务外包学院</header>
 <hr>
 <h1>统一建模语言理论测试</h1>
-<table>
-    <tr>
-        <td>
-            考试科目： <u><b>统一建模语言UML</b></u>
-            &nbsp;&nbsp;&nbsp;
-        </td>
-        <td>
-            时 间： <u> 100分钟 </u>
-            &nbsp;&nbsp;&nbsp;
-        </td>
-        <td>
-            得 分： <input type="text" ,name='分数'>
-        </td>
-    </tr>
-    <tr>
-        <td>
-            班 级： <input type="text" ,name="班级">
-            &nbsp;&nbsp;&nbsp;
-        </td>
-        <td>
-            学 号： <input type="text" ,name="学号">
-            &nbsp;&nbsp;&nbsp;
-        </td>
-        <td>
-            姓 名： <input type='text' ,name="姓名">
-        </td>
-    </tr>
-</table>
+<section>
+    <table>
+        <tr>
+            <td>
+                考试科目： <u><b>统一建模语言UML</b></u>
+                &nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+                时 间： <u> 100分钟 </u>
+                &nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+                得 分： <input type="text" name="分数" id="总分">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                班 级： <input type="text" name="班级" id="班级">
+                &nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+                学 号： <input type="text" name="学号" id="学号">
+                &nbsp;&nbsp;&nbsp;
+            </td>
+            <td>
+                姓 名： <input type='text' name="姓名" id="姓名">
+            </td>
+        </tr>
+    </table>
+</section>
 <br/><br/>
 <section>
-    <h3>一：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>填空题</b></h3>
-    1：UML 的中文全称是：<input type="text" ,name="答案"><br/>
-    2：对象最突出的特征是：<input type="text" ,name="答案">&nbsp;&nbsp;&nbsp;<input type="text" ,name="答案">&nbsp;&nbsp;&nbsp;<input
-        type="text" ,name="答案">
+    <h3>一.&nbsp;&nbsp;&nbsp;<b>填空题(每空5分，共20分)</b></h3>
+    1：UML 的中文全称是： <input type="text" name="答案"><br/>
+    2：对象最突出的特征是：<input type="text" name="答案">&nbsp;&nbsp;&nbsp;<input type="text" name="答案">&nbsp;&nbsp;&nbsp;<input
+        type="text" name="答案">
 </section>
 <br/>
 <section>
-    <h3>二 ：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>选择题</b></h3>
-    1.UML 与软件工程的关系是：<input type="text" ,name="答案"><br/>
+    <h3>二.&nbsp;&nbsp;&nbsp;<b>选择题(每题10分，共20分)</b></h3>
+    1.UML 与软件工程的关系是：<input type="text" name="选择"><br/>
     <ol type='A'>
         <li>UML 就是软件工程</li>
         <li>UML 参与到软件工程中软件开发过程的几个阶段</li>
         <li>UML 与软件工程无关</li>
         <li>UML 是软件工程的一部分</li>
     </ol>
-    2.Java语言支持：<input type="text" , name="答案"><br/>
+    2.Java语言支持：<input type="text" name="选择"><br/>
     <ol type='A'>
         <li>单继承</li>
         <li>多继承</li>
@@ -62,15 +65,15 @@
 </section>
 <br/>
 <section>
-    <h3>三 ：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>多选题</b></h3>
-    1. 用例的粒度分为以下哪三种<input type="text" , name="答案"><br/>
+    <h3>三.&nbsp;&nbsp;&nbsp;<b>多选题(每题10分，共20分)</b></h3>
+    1. 用例的粒度分为以下哪三种<input type="text" name="多选"><br/>
     <ol type='A'>
         <li>概述级</li>
         <li>需求级</li>
         <li>用户目标级</li>
         <li>子功能级</li>
     </ol>
-    2. 类图由以下哪三部分组成<input type="text" , name="答案"><br/>
+    2. 类图由以下哪三部分组成<input type="text" name="多选"><br/>
     <ol type='A'>
         <li>名称(Name)</li>
         <li>属性(Attribute)</li>
@@ -80,18 +83,18 @@
 </section>
 <br/>
 <section>
-    <h3>四 ：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>判断题</b></h3>
-    1. 用例图只是用于和客户交流和沟通的,用于确定需求。<input type="text" , name="答案"><br/>
-    2. 在状态图中,终止状态在一个状态图中允许有任意多个。<input type="text" , name="答案"><br/>
+    <h3>四.&nbsp;&nbsp;&nbsp;<b>判断题(每题10分，共20分)</b></h3>
+    1. 用例图只是用于和客户交流和沟通的,用于确定需求。<input type="text" name="判断"><br/>
+    2. 在状态图中,终止状态在一个状态图中允许有任意多个。<input type="text" name="判断"><br/>
 </section>
 <br/>
 <section>
 
-    <h3>五 ：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>简答题</b></h3>
+    <h3>五.&nbsp;&nbsp;&nbsp;<b>简答题(共10分)</b></h3>
     1. 简述什么是模型以及模型的表现形式?<br/>
-    <textarea name="content" ，rows="10" ,cols="10"> </textarea>
+    <textarea name="content" rows="5" cols="20" id="简答"> </textarea>
 </section>
 <br/><br/>
-1 / 1
+<button type=" button" onclick="submit()">提交</button>
 </body>
 </html>
