--- a/exam.html
+++ b/exam.html
@@ -4,59 +4,54 @@
     <meta charset="UTF-8">
     <title>考试系统</title>
     <script type="text/javascript" src="index.js"></script>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 </head>
 <body>
-<header>西安软件服务外包学院</header>
-<hr>
-<h1>统一建模语言理论测试</h1>
-<section>
-    <table>
-        <tr>
-            <td>
-                考试科目： <u><b>统一建模语言UML</b></u>
-                &nbsp;&nbsp;&nbsp;
-            </td>
-            <td>
-                时 间： <u> 100分钟 </u>
-                &nbsp;&nbsp;&nbsp;
-            </td>
-            <td>
-                得 分： <input type="text" name="分数" id="总分">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                班 级： <input type="text" name="班级" id="班级">
-                &nbsp;&nbsp;&nbsp;
-            </td>
-            <td>
-                学 号： <input type="text" name="学号" id="学号">
-                &nbsp;&nbsp;&nbsp;
-            </td>
-            <td>
-                姓 名： <input type='text' name="姓名" id="姓名">
-            </td>
-        </tr>
-    </table>
+<section class="form-group">
+    <header class="page-header">
+        <small>西安软件服务外包学院</small>
+    </header>
+    <section class="row bg-success" disabled="disabled">
+        <section class="col-lg-12">
+            <h1 class="text-center">统一建模语言理论测试</h1>
+        </section>
+    </section>
+
+    <section class="row">
+        <section class="col-lg-4">考试科目：<b><u>统一建模语言UML</u></b></section>
+        <section class="col-lg-4">时 间：<u>100分钟</u></section>
+        <section class="col-lg-4"><label for="totalScore">得 分：</label><input type="text" id="totalScore"></section>
+    </section>
+
+    <section class="row">
+        <section class="col-lg-4"><label for="className">班 级： </label><input type="text" name="className"
+                                                                             id="className">
+        </section>
+        <section class="col-lg-4"><label for="studentNumber">学 号： </label><input type="text" name="studentNumber"
+                                                                                 id="studentNumber"></section>
+        <section class="col-lg-4"><label for="studentName">姓 名： </label><input type='text' name="studentName"
+                                                                               id="studentName"></section>
+    </section>
 </section>
-<br/><br/>
-<section>
-    <header>一.&nbsp;&nbsp;&nbsp;<b>填空题(每空5分，共20分)</b></header>
-    1：UML 的中文全称是： <input type="text" name="答案"><br/>
-    2：对象最突出的特征是：<input type="text" name="答案">&nbsp;&nbsp;&nbsp;<input type="text" name="答案">&nbsp;&nbsp;&nbsp;<input
-        type="text" name="答案">
+
+<section class="form-group">
+    <header><b>一. 填空题(每空5分，共20分)</b></header>
+    1：UML 的中文全称是： <input type="text" name="blanksAnswer"><br/>
+    2：对象最突出的特征是：<input type="text" name="blanksAnswer">
+    <input type="text" name="blanksAnswer">
+    <input type="text" name="blanksAnswer">
 </section>
-<br/>
-<section>
-    <header>二.&nbsp;&nbsp;&nbsp;<b>选择题(每题10分，共20分)</b></header>
-    <h4>1.UML 与软件工程的关系是：<input type="text" name="选择"></h4>
+
+<section class="form-group">
+    <header><b>二. 选择题(每题10分，共20分)</b></header>
+    <h4>1.UML 与软件工程的关系是：<input type="text" name="choiceAnswer"></h4>
     <ol type='A'>
         <li>UML 就是软件工程</li>
         <li>UML 参与到软件工程中软件开发过程的几个阶段</li>
         <li>UML 与软件工程无关</li>
         <li>UML 是软件工程的一部分</li>
     </ol>
-    <h4>2.Java语言支持：<input type="text" name="选择"></h4>
+    <h4>2.Java语言支持：<input type="text" name="choiceAnswer"></h4>
     <ol type='A'>
         <li>单继承</li>
         <li>多继承</li>
@@ -64,17 +59,17 @@
         <li>单继承和多继承都不支持</li>
     </ol>
 </section>
-<br/>
-<section>
-    <header>三.&nbsp;&nbsp;&nbsp;<b>多选题(每题10分，共20分)</b></header>
-    <h4> 1. 用例的粒度分为以下哪三种<input type="text" name="多选"></h4>
+
+<section class="form-group">
+    <header><b>三. 多选题(每题10分，共20分)</b></header>
+    <h4> 1. 用例的粒度分为以下哪三种<input type="text" name="multipleChoiceAnswer"></h4>
     <ol type='A'>
         <li>概述级</li>
         <li>需求级</li>
         <li>用户目标级</li>
         <li>子功能级</li>
     </ol>
-    <h4>2. 类图由以下哪三部分组成<input type="text" name="多选"></h4>
+    <h4>2. 类图由以下哪三部分组成<input type="text" name="multipleChoiceAnswer"></h4>
     <ol type='A'>
         <li>名称(Name)</li>
         <li>属性(Attribute)</li>
@@ -82,19 +77,21 @@
         <li>方法(Function)</li>
     </ol>
 </section>
-<br/>
-<section>
-    <header>四.&nbsp;&nbsp;&nbsp;<b>判断题(每题10分，共20分)</b></header>
-    1. 用例图只是用于和客户交流和沟通的,用于确定需求。<input type="text" name="判断"><br/>
-    2. 在状态图中,终止状态在一个状态图中允许有任意多个。<input type="text" name="判断"><br/>
+
+<section class="form-group">
+    <header><b>四. 判断题(每题10分，共20分)</b></header>
+    1. 用例图只是用于和客户交流和沟通的,用于确定需求。<input type="text" name="trueOrFalseAnswer"><br/>
+    2. 在状态图中,终止状态在一个状态图中允许有任意多个。<input type="text" name="trueOrFalseAnswer">
 </section>
-<br/>
-<section>
-    <header>五.&nbsp;&nbsp;&nbsp;<b>简答题(共10分)</b></header>
-    1. 简述什么是模型以及模型的表现形式?<br/>
-    <textarea name="content" rows="5" cols="20" id="简答"> </textarea>
+
+<section class="form-group">
+    <header><b>五. 简答题(共10分)</b></header>
+    <label for="shortAnswerAnswer">
+        1. 简述什么是模型以及模型的表现形式?<br/>
+    </label>
+    <textarea class="form-control" rows="3" name="content" id="shortAnswerAnswer"> </textarea>
 </section>
-<br/><br/>
-<button type=" button" onclick="submit()">提交</button>
+
+<button class="btn btn-info" type=" button" onclick="submit()">提交</button>
 </body>
 </html>
