--- a/exam.html
+++ b/exam.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 </head>
-<body>
+<body  class="container">
 <section class="form-group">
     <header class="page-header">
         <small>西安软件服务外包学院</small>
